update work scss gird

--- a/client/src/app/components/employee/employee.component.html
+++ b/client/src/app/components/employee/employee.component.html
@@ -45,7 +45,7 @@
 <!-- /Table -->
 
 <!-- Pagination -->
-<div class="d-flex justify-content-center pagination pagination-sm">
+<div class="d-flex justify-content-center pagination pagination-sm mt-2">
   <ngb-pagination [collectionSize]="result_Data.length" [(page)]="page" [pageSize]="10" [maxSize]="100" [rotate]="true"
     [boundaryLinks]="true" (pageChange)="refreshResult_List()"></ngb-pagination>
 </div>
