--- a/client/src/app/components/work/work.component.scss
+++ b/client/src/app/components/work/work.component.scss
@@ -1,57 +1,158 @@
-// input[type="datetime-local"] {
-//     opacity: 1;
-//     position: relative;
-//     color: transparent;
-//     border: none;
-//     background-color: transparent;
-// }
-
-// input[type="datetime-local"]::-webkit-calendar-picker-indicator {
-//     position: absolute;
-//     top: 0;
-//     bottom: 0;
-//     right: 0;
-//     left: 0;
-//     width: 100%;
-//     height: 100%;
-//     z-index: 100;
-//     -webkit-appearance: none;
-// }
-
-// input[type="datetime-local"]::-webkit-calendar-picker-indicator:hover {
-//     background-color: transparent;
-// }
-
-// input[type="datetime-local"]::-webkit-inner-spin-button {
-//     -webkit-appearance: none;
-// }
-
-// input[type="datetime-local"]::-webkit-datetime-edit
-// {
-//     opacity: 0;
-//     -webkit-appearance: none;
-// }
-
-// input[type="datetime-local"]::-webkit-clear-button
-// {
-//     background: none;
-//     -webkit-appearance: none;
-// }
-
-// .input-group-text {
-//     background-color: transparent;
-//     border: none;
-// }
-
 /*** Form Icon Button ***/
 .icon-btn
 {
-    top: 5px;
-    right:5px;
-    cursor: pointer;
-    z-index: 999;
+  top: 5px;
+  right:5px;
+  cursor: pointer;
+  z-index: 999;
 }
 .datetime-font-size
 {
-    font-size: .8em;
+  font-size: .8em;
+}
+// gird View
+.grid-container
+{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 30px 100%;
+  // grid-template-columns: 1fr;
+  // grid-template-rows: 0.8fr 10fr;
+  // gap: 0 0.5em;
+  padding: 5px 2px 5px 2px;
+  justify-items: stretch;
+  align-items: start;
+  grid-template-areas:
+  "grid-header"
+  "grid-body";
+  min-height: 60vh;
+  font-size: 1em;
+  // scroll-padding-top: 7rem;
+  // scroll-behavior: smooth;
+}
+.grid-container .grid-header
+{
+  display: grid;
+  grid-template-columns: 30px 150px 150px 150px 150px 150px 50px 50px 487px 100px;
+  grid-template-rows: 1fr;
+  gap: 0 0.2em;
+  // grid-auto-rows: 30px;
+}
+.grid-container > .grid-body
+{
+  display: grid;
+  gap: 0.3em 0;
+  grid-auto-rows: minmax(50px, auto);
+}
+grid-container,
+.grid-container .grid-body::-webkit-scrollbar
+{
+  height: .4rem;
+}
+// grid-container,
+.grid-container .grid-body::-webkit-scrollbar-track
+{
+  background-color: transparent;
+}
+// grid-container,
+.grid-container .grid-body::-webkit-scrollbar-thumb
+{
+  background-color: rgba(172, 12, 12, 0.5);
+  border-radius: 5rem;
+}
+.grid-container .grid-header > div,
+.grid-container .grid-body .grid-content > div
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border: black 1px solid;
+}
+.grid-container .grid-body .grid-content
+{
+  display: grid;
+  // grid-template-columns: 0.2fr 1fr 1fr 1fr 1.2fr 1.2fr 0.7fr 0.3fr 3fr 0.7fr;
+  grid-template-columns: 30px 150px 150px 150px 150px 150px 50px 50px 487px 100px;
+  grid-template-rows: 1fr;
+  gap: 0 0.2em;
+}
+.grid-container .grid-body .grid-content > div > div
+{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.grid-container .grid-body .grid-content > div > div~div
+{
+    border-top: 1px black solid;
+}
+/*** @media only screen ***/
+@media (max-width: 860px)
+{
+  .grid-container
+  {
+    grid-template-columns: 35px 100%;
+    grid-template-rows: 1fr;
+    gap: 0 0.2em;
+    grid-template-areas:
+    "grid-header"
+    "grid-body";
+    font-size: xx-small;
+  }
+  .grid-container .grid-header
+  {
+    grid-template-columns: 1fr;
+    grid-template-rows: 20px 30px 30px 30px 80px 80px 25px 25px 102px 20px;
+    gap: 0.2em 0;
+    min-height: 100%;
+  }
+  .grid-container .grid-header > div
+  {
+    line-height: 14px;
+    // transform: scale(0.7);
+  }
+  // .grid-container .grid-header
+  // {
+  //   grid-template-columns: 1fr;
+  //   // grid-template-rows: 0.2fr 2fr 2fr 2fr 3fr 2fr 2fr 2fr 2fr 2fr;
+  //   grid-template-rows: 0.1fr 0.3fr 1fr 1fr 1fr 2fr 1fr 1fr 1fr 0.8fr;
+  //   gap: 0.2em 0;
+  //   min-height: 100%;
+  //   // grid-auto-flow: row;
+  //   // overflow-y: auto;    
+  // }
+  .grid-container .grid-body
+  {
+    // grid-template-columns: minmax(0, 1fr);
+    grid-template-columns: repeat(auto-fill, 1fr);
+    grid-template-rows: 1fr;
+    grid-gap: 0 0.2em;
+    grid-auto-columns: minmax(160px, 1fr);
+    grid-auto-flow: column;
+    overflow-x: scroll;
+    min-height: 100%;
+    scroll-padding-top: 7rem;
+    scroll-behavior: smooth;
+  }
+  .grid-container .grid-body .grid-content
+  {
+    grid-template-columns: 1fr;
+    grid-template-rows: 20px 30px 30px 30px 80px 80px 25px 25px 102px 20px;
+    gap: 0.2em 0;
+  }
+  .grid-container .grid-body .grid-content > div
+  {
+    flex-direction: row;
+    word-break: break-all;
+  }
+  .grid-container .grid-body .grid-content > div > div~div
+  {
+    border-top: 0;
+    border-left: 1px black solid;
+  }
 }
