--- a/client/src/app/components/modal/modal.component.html
+++ b/client/src/app/components/modal/modal.component.html
@@ -1,9 +1,9 @@
 <!-- Modal Form -->
 <ng-template #modalForm let-modal>
   <!-- Header -->
-  <div class="modal-header" *ngIf="alerts">
+  <div class="modal-header">
     <!-- Alert -->
-    <ngb-alert *ngIf="alerts.status" class="modal-title w-100 d-flex justify-content-center pt-3 pb-0" [type]="alerts.type"
+    <ngb-alert [class.d-none]="!alerts.status" *ngIf="alerts.status" class="modal-title w-100 d-flex justify-content-center pt-3 pb-0" [type]="alerts.type"
       (click)="alerts.status = !alerts.status" animation="true" [dismissible]="true">
       <p>{{ alerts.message }}</p>
     </ngb-alert>
@@ -28,9 +28,9 @@
 <!-- Modal SM -->
 <ng-template #modalSM let-modal>
   <!-- Header -->
-  <div class="modal-header" *ngIf="alerts">
+  <div class="modal-header">
     <!-- Alert -->
-    <ngb-alert *ngIf="alerts.status" class="modal-title w-100 d-flex justify-content-center pt-3 pb-0" [type]="alerts.type"
+    <ngb-alert [class.d-none]="!alerts.status" *ngIf="alerts.status" class="modal-title w-100 d-flex justify-content-center pt-3 pb-0" [type]="alerts.type"
       (click)="alerts.status = !alerts.status" animation="true" [dismissible]="true">
       <p>{{ alerts.message }}</p>
     </ngb-alert>
