--- a/client/src/app/components/work/work.component.html
+++ b/client/src/app/components/work/work.component.html
@@ -4,8 +4,7 @@
 </div>
 <!-- /Form -->
 
-<!-- Table -->
-
+<!-- Grid Table -->
 <div class="grid-container">
   <div class="grid-header">
     <div>#</div>
@@ -122,7 +121,7 @@
     </tbody>
   </table>
 </div> -->
-<!-- /Table -->
+<!-- /Grid Table -->
 
 <!-- Pagination -->
 <div class="d-flex justify-content-center pagination pagination-sm mt-2">
