--- a/client/src/app/components/employee/employee.component.scss
+++ b/client/src/app/components/employee/employee.component.scss
@@ -1,49 +1,162 @@
-/*** @media only screen ***/
-@media (max-width: 575.99px)
+/** Grid Table ***/
+.grid-container
 {
-  /*** table ***/
-  table
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 40px;
+  justify-items: center;
+  align-items: stretch;
+  gap: 0.6em 0;
+  grid-template-areas:
+  "grid-header"
+  "grid-body";
+  height: 70vh;
+  font-size: 1em;
+  margin-top: 1rem;
+}
+.grid-container .grid-header
+{
+  display: grid;
+  grid-template-columns: 30px 150px 200px 150px 150px 150px;
+  grid-template-rows: 1fr;
+  gap: 0 0.2em;
+  font-weight: 600;
+  // grid-auto-rows: 30px;
+}
+.grid-container .grid-header div
+{
+  background-color:rgb(246, 246, 246);
+}
+.grid-container > .grid-body
+{
+  display: grid;
+  gap: 0.3em 0;
+  // grid-auto-rows: minmax(50px, auto);
+}
+grid-container,
+.grid-container .grid-body::-webkit-scrollbar
+{
+  height: .4rem;
+}
+// grid-container,
+.grid-container .grid-body::-webkit-scrollbar-track
+{
+  background-color: transparent;
+}
+// grid-container,
+.grid-container .grid-body::-webkit-scrollbar-thumb
+{
+  background-color: rgba(172, 12, 12, 0.5);
+  border-radius: 5rem;
+}
+.grid-container .grid-header > div,
+.grid-container .grid-body .grid-content > div
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border: black 1px solid;
+}
+.grid-container .grid-body .grid-content
+{
+  display: grid;
+  grid-template-columns: 30px 150px 200px 150px 150px 150px;
+  gap: 0 0.2em;
+  cursor: pointer;
+}
+.grid-container .grid-body .grid-content:hover > div
+{
+  background-color:rgb(246, 246, 246);
+}
+.suspension::before
+{
+  content: '停權';
+  position: absolute;
+  top:5px;
+  left: 5px;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: xx-small;
+  font-weight: 600;
+  width: 30px;
+  height: 15px;
+  border: solid 1px var(--red-color);
+  border-radius: 2px;
+  opacity: 0.6;
+  color: var(--red-color);
+  transform: rotate(-10deg);
+}
+.grid-container .grid-body .grid-content > div.suspension
+{
+  position: relative;
+}
+.grid-container .grid-body .grid-content.grid-selected > div
+{
+  border: black 2px solid;
+  font-weight: 600;
+}
+.grid-container .grid-body .grid-content > div > div
+{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.grid-container .grid-body .grid-content > div > div~div
+{
+    border-top: 1px black solid;
+}
+/*** @media only screen ***/
+@media (max-width: 860px)
+{
+  .grid-container
   {
-    position: relative;
-    display: inline-flex;
-    // flex-direction: row;
-    font-size: .8rem; // 10px
+    grid-template-columns: 35px;
+    grid-template-rows: 1fr;
+    justify-items: stretch;
+    gap: 0 0.6em;
+    grid-template-areas:
+    "grid-header grid-body";
+    font-size: xx-small;
+    max-height: 360px;
   }
-  /*** Table Selected ***/
-  tbody.table-selected tr,
-  tbody.table-selected td
+  .grid-container .grid-header
   {
-    border: 1px solid var(--dark-color) !important;
+    grid-template-columns: 1fr;
+    grid-template-rows: 30px 60px 60px 60px 60px 60px;
+    gap: 0.2em 0;
   }
-  table thead tr
+  .grid-container .grid-body
   {
-    position: fixed;
-    z-index: 99;
-    left: 0;
-    display: flex;
-    gap: 5px;
-    flex-direction: column;
-    width: 40px !important; 
+    grid-template-columns: repeat(auto-fill, 1fr);
+    grid-template-rows: 1fr;
+    grid-gap: 0 0.2em;
+    grid-auto-columns: minmax(160px, 1fr);
+    grid-auto-flow: column;
+    overflow-x: scroll;
+    scroll-padding-top: 7rem;
+    scroll-behavior: smooth;
   }
-  table tbody tr td
+  .grid-container .grid-body .grid-content
   {
-    display: flex;
+    grid-template-columns: 1fr;
+    grid-template-rows: 30px 60px 60px 60px 60px 60px;
+    gap: 0.2em 0;
+  }
+  .grid-container .grid-body .grid-content > div
+  {
     flex-direction: row;
-    margin: 4px 2px 4px 2px;
+    word-break: break-all;
   }
-  table tbody:nth-child(2)
+  .grid-container .grid-body .grid-content > div > div~div
   {
-    margin-left: 30px;
-  }
-  /*** Table Suspension Style ***/
-  table td.suspension::before 
-  {
-    left: -210px;
-    transform: rotate(66deg);
-  }
-  /*** pagination ***/
-  .pagination .page-item .page-link
-  {
-    font-size: 12px !important;
+    border-top: 0;
+    border-left: 1px black solid;
   }
 }
