--- a/client/src/app/components/header/header.component.scss
+++ b/client/src/app/components/header/header.component.scss
@@ -86,6 +86,8 @@ nav > strong
     .show-sidebar
     {
         visibility: hidden;
+        top: 50px;
+        opacity: 0;
     }
     app-sidebar
     {
@@ -94,6 +96,7 @@ nav > strong
         border-color: rgba($color: #d2d2d2, $alpha: .5);
         display: flex;
         height: 100px;
+        opacity: 1;
         top: 60px;
         // transition: height 0ms 100ms, opacity 100ms 0ms;
         position: fixed;
@@ -109,6 +112,6 @@ nav > strong
         top: 160px;
         position: fixed;
         z-index: 888;        
-        transition: all .5s linear;
+        transition: all 0.5s linear;
     }
 }
