--- a/client/src/app/components/work/work.component.scss
+++ b/client/src/app/components/work/work.component.scss
@@ -6,29 +6,26 @@
   cursor: pointer;
   z-index: 999;
 }
+/*** Date Input ***/
 .datetime-font-size
 {
   font-size: .8em;
 }
-// gird View
+/** Grid Table ***/
 .grid-container
 {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 30px 100%;
-  // grid-template-columns: 1fr;
-  // grid-template-rows: 0.8fr 10fr;
-  // gap: 0 0.5em;
-  padding: 5px 2px 5px 2px;
-  justify-items: stretch;
-  align-items: start;
+  grid-template-rows: 40px;
+  justify-items: center;
+  align-items: stretch;
+  gap: 0.6em 0;
   grid-template-areas:
   "grid-header"
   "grid-body";
-  min-height: 60vh;
+  height: 90vh;
   font-size: 1em;
-  // scroll-padding-top: 7rem;
-  // scroll-behavior: smooth;
+  margin-top: 1rem;
 }
 .grid-container .grid-header
 {
@@ -36,25 +33,26 @@
   grid-template-columns: 30px 150px 150px 150px 150px 150px 50px 50px 487px 100px;
   grid-template-rows: 1fr;
   gap: 0 0.2em;
-  // grid-auto-rows: 30px;
+  font-weight: 600;
+}
+.grid-container .grid-header div
+{
+  background-color:rgb(246, 246, 246);
 }
 .grid-container > .grid-body
 {
   display: grid;
   gap: 0.3em 0;
-  grid-auto-rows: minmax(50px, auto);
 }
 grid-container,
 .grid-container .grid-body::-webkit-scrollbar
 {
   height: .4rem;
 }
-// grid-container,
 .grid-container .grid-body::-webkit-scrollbar-track
 {
   background-color: transparent;
 }
-// grid-container,
 .grid-container .grid-body::-webkit-scrollbar-thumb
 {
   background-color: rgba(172, 12, 12, 0.5);
@@ -73,10 +71,18 @@ grid-container,
 .grid-container .grid-body .grid-content
 {
   display: grid;
-  // grid-template-columns: 0.2fr 1fr 1fr 1fr 1.2fr 1.2fr 0.7fr 0.3fr 3fr 0.7fr;
   grid-template-columns: 30px 150px 150px 150px 150px 150px 50px 50px 487px 100px;
-  grid-template-rows: 1fr;
   gap: 0 0.2em;
+  cursor: pointer;
+}
+.grid-container .grid-body .grid-content:hover > div
+{
+  background-color:rgb(246, 246, 246);
+}
+.grid-container .grid-body .grid-content.grid-selected > div
+{
+  border: black 2px solid;
+  font-weight: 600;
 }
 .grid-container .grid-body .grid-content > div > div
 {
@@ -96,53 +102,40 @@ grid-container,
 {
   .grid-container
   {
-    grid-template-columns: 35px 100%;
+    grid-template-columns: 35px;
     grid-template-rows: 1fr;
-    gap: 0 0.2em;
+    justify-items: stretch;
+    gap: 0 0.6em;
     grid-template-areas:
-    "grid-header"
-    "grid-body";
+    "grid-header grid-body";
     font-size: xx-small;
+    max-height: 650px;
   }
   .grid-container .grid-header
   {
     grid-template-columns: 1fr;
-    grid-template-rows: 20px 30px 30px 30px 80px 80px 25px 25px 102px 20px;
+    grid-template-rows: 25px 40px 40px 40px 110px 110px 25px 25px 180px 25px;
     gap: 0.2em 0;
-    min-height: 100%;
   }
-  .grid-container .grid-header > div
-  {
-    line-height: 14px;
-    // transform: scale(0.7);
-  }
-  // .grid-container .grid-header
+  // .grid-container .grid-header > div
   // {
-  //   grid-template-columns: 1fr;
-  //   // grid-template-rows: 0.2fr 2fr 2fr 2fr 3fr 2fr 2fr 2fr 2fr 2fr;
-  //   grid-template-rows: 0.1fr 0.3fr 1fr 1fr 1fr 2fr 1fr 1fr 1fr 0.8fr;
-  //   gap: 0.2em 0;
-  //   min-height: 100%;
-  //   // grid-auto-flow: row;
-  //   // overflow-y: auto;    
+  //   line-height: 14px;
   // }
   .grid-container .grid-body
   {
-    // grid-template-columns: minmax(0, 1fr);
     grid-template-columns: repeat(auto-fill, 1fr);
     grid-template-rows: 1fr;
     grid-gap: 0 0.2em;
     grid-auto-columns: minmax(160px, 1fr);
     grid-auto-flow: column;
     overflow-x: scroll;
-    min-height: 100%;
     scroll-padding-top: 7rem;
     scroll-behavior: smooth;
   }
   .grid-container .grid-body .grid-content
   {
     grid-template-columns: 1fr;
-    grid-template-rows: 20px 30px 30px 30px 80px 80px 25px 25px 102px 20px;
+    grid-template-rows: 25px 40px 40px 40px 110px 110px 25px 25px 180px 25px;
     gap: 0.2em 0;
   }
   .grid-container .grid-body .grid-content > div
