--- a/client/src/app/components/employee/employee.component.html
+++ b/client/src/app/components/employee/employee.component.html
@@ -61,12 +61,9 @@
   <form [formGroup]="fbGroup" #form="ngForm">
     <!-- Name -->
     <div class="form-group row">
-      <label for="name" class="col-3 col-form-label" *ngIf="!errorValidators['e_Name'].length; else e_Name">姓名</label>
-
-      <ng-template #e_Name>
-        <label for="name" class="col-3 col-form-label text-danger">{{ errorValidators['e_Name'] }}</label>
-      </ng-template>
-
+      <label for="name" [ngClass]="['col-3 col-form-label', errorValidators['e_Name'].length ? 'text-danger' : '']">
+        {{ errorValidators['e_Name'].length ? errorValidators['e_Name'] : "姓名" }}
+      </label>
       <div class="col">
         <input type="text" id="name" class="form-control" formControlName="e_Name" placeholder="姓名"
           (blur)="inputValidators(fbGroup, 'e_Name')">
@@ -75,14 +72,10 @@
 
     <!-- Job Number -->
     <div class="form-group row">
-      <label for="jobNumber" class="col-3 col-form-label"
-        *ngIf="!errorValidators['e_JobNumber'].length; else e_JobNumber">工號</label>
-
-      <ng-template #e_JobNumber>
-        <label for="jobNumber" class="col-3 col-form-label text-danger">{{ errorValidators['e_JobNumber']
-          }}</label>
-      </ng-template>
-
+      <label for="jobNumber"
+        [ngClass]="['col-3 col-form-label', errorValidators['e_JobNumber'].length ? 'text-danger' : '']">
+        {{ errorValidators['e_JobNumber'].length ? errorValidators['e_JobNumber'] : "工號" }}
+      </label>
       <div class="col">
         <input type="text" id="jobNumber" class="form-control" formControlName="e_JobNumber" placeholder="工號"
           (blur)="inputValidators(fbGroup, 'e_JobNumber')">
@@ -91,13 +84,10 @@
 
     <!-- Password -->
     <div class="form-group row">
-      <label for="passWord" class="col-3 col-form-label"
-        *ngIf="!errorValidators['e_PassWord'].length; else e_PassWord">密碼</label>
-
-      <ng-template #e_PassWord>
-        <label for="passWord" class="col-3 col-form-label text-danger">{{ errorValidators['e_PassWord'] }}</label>
-      </ng-template>
-
+      <label for="passWord"
+        [ngClass]="['col-3 col-form-label', errorValidators['e_PassWord'].length ? 'text-danger' : '']">
+        {{ errorValidators['e_PassWord'].length ? errorValidators['e_PassWord'] : "密碼" }}
+      </label>
       <div class="col" [class.pr-1]="!fb_Value_Index[0]">
         <div class="input-group input-group-md">
           <input type="password" id="passWord" class="form-control" formControlName="e_PassWord" placeholder="密碼"
@@ -106,7 +96,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text"
               (click)="passWord_Type.type == 'text' ? passWord_Type.type = 'password': passWord_Type.type = 'text'">
-              <i [ngClass]="passWord_Type.type == 'password' ? 'bi bi-eye-slash-fill' : 'bi bi-eye-fill'"></i>
+              <i [ngClass]="[passWord_Type.type == 'password' ? 'bi bi-eye-slash-fill' : 'bi bi-eye-fill']"></i>
             </span>
           </div>
         </div>
@@ -121,10 +111,9 @@
 
             <div class="input-group-prepend">
               <span class="input-group-text"
-                (click)="e_ConfirmPassword_Type.type == 'text' ? e_ConfirmPassword_Type.type = 'password': e_ConfirmPassword_Type.type = 'text'">
-                <i
-                  [ngClass]="{'bi bi-eye-slash-fill': e_ConfirmPassword_Type.type == 'password', 'bi bi-eye-fill': e_ConfirmPassword_Type.type == 'password', 'text-danger': errorValidators['e_ConfirmPassword'].length}"></i>
-              </span>
+              (click)="e_ConfirmPassword_Type.type == 'text' ? e_ConfirmPassword_Type.type = 'password': e_ConfirmPassword_Type.type = 'text'">
+              <i [ngClass]="[e_ConfirmPassword_Type.type == 'password' ? 'bi bi-eye-slash-fill' : 'bi bi-eye-fill', errorValidators['e_ConfirmPassword'].length ? 'text-danger' : '']"></i>
+            </span>
             </div>
           </div>
         </div>
@@ -133,13 +122,9 @@
 
     <!-- Email -->
     <div class="form-group row">
-      <label for="email" class="col-3 col-form-label"
-        *ngIf="!errorValidators['e_Email'].length; else e_Email">信箱</label>
-
-      <ng-template #e_Email>
-        <label for="email" class="col-3 col-form-label text-danger">{{ errorValidators['e_Email']
-          }}</label>
-      </ng-template>
+      <label for="email" [ngClass]="['col-3 col-form-label', errorValidators['e_Email'].length ? 'text-danger' : '']">
+        {{ errorValidators['e_Email'].length ? errorValidators['e_Email'] : "信箱" }}
+      </label>
 
       <div class="col">
         <input type="email" id="email" class="form-control" formControlName="e_Email" placeholder="信箱"
@@ -151,21 +136,20 @@
     <div class="form-group row">
       <label for="lv" class="col-3 col-form-label">權限</label>
       <div class="col-3">
-        <!-- <ngb-rating [formControl]="fb_Value['e_Lv']" [readonly]="user.lv < 2" class="h3"></ngb-rating> -->
         <ngb-rating [rate]="fb_Value['e_Lv'].value" readonly="true" class="h4"></ngb-rating>
       </div>
       <div class="col-6">
         <select id="lv" class="form-control text-center custom-select" formControlName="e_Lv">
-          <option value="0" [selected]="fb_Value['e_Lv'].value == 0">
+          <option [value]="0">
             停權
           </option>
-          <option value="1" [selected]="fb_Value['e_Lv'].value == 1">
+          <option [value]="1">
             普通
           </option>
-          <option value="2" [selected]="fb_Value['e_Lv'].value == 2">
+          <option [value]="2">
             中級
           </option>
-          <option value="3" [selected]="fb_Value['e_Lv'].value == 3">
+          <option [value]="3">
             高級
           </option>
         </select>
