--- a/client/src/app/components/repair/repair.component.html
+++ b/client/src/app/components/repair/repair.component.html
@@ -1,1 +1,229 @@
-<p>repair works!</p>
+<!-- Form -->
+<div class="container-lg border border-dark p-2 mt-2 mb-2">
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, nam.
+</div>
+<!-- /Form -->
+
+<!-- Grid Table -->
+<div class="grid-container" [ngStyle]="{'align-items': result_List.length > 5 ? 'stretch':'start'}">
+  <div class="grid-header">
+    <div>#</div>
+    <div>工號</div>
+    <div>客戶</div>
+    <div>序號</div>
+    <div>工單</div>
+    <div>機種</div>
+    <div>不良原因</div>
+    <div>查修過程</div>
+    <div>日期工時</div>
+    <div>狀態</div>
+  </div>
+  <div class="grid-body">
+    <div class="grid-content" *ngFor="let item of result_List; let i = index" (click)="user.e_Lv > 1 && choose(item)"
+      [ngClass]="{'grid-selected': item?.r_Id == fb_Value_Index[0]}">
+      <div>{{i+1}}</div>
+      <div>
+        <span>
+          {{ item.r_JobNumber }}
+        </span>
+      </div>
+      <div>
+        <span>
+          {{ item.r_Client }}
+        </span>
+      </div>
+      <div>
+        <span>
+          {{ item.r_SerialNumber }}
+        </span>
+      </div>
+      <div>
+        <span>
+          {{ item.r_WorkOrder }}
+        </span>
+      </div>
+      <div>
+        <span>
+          {{ item.r_Model }}
+        </span>
+      </div>
+      <div>
+        <span>
+          {{ item.r_Error | splite:0 }} {{ item.r_Error | splite:1 }}
+        </span>
+      </div>
+      <div>
+        <div *ngFor="let val of item.r_Process.split(','); let y = index">
+          <span>
+            {{ item.r_Process | splite:y }}
+          </span>
+        </div>
+      </div>
+      <div>
+        <div *ngFor="let val of item.r_Date.split(','); let y = index">
+          <span>
+            {{ item.r_Date | splite:y }}
+          </span>
+        </div>
+      </div>
+      <div>
+        <span>
+          {{ item.r_Status }}
+        </span>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- /Grid Table -->
+
+<!-- Pagination -->
+<!-- <div class="d-flex justify-content-center pagination pagination-sm mt-2">
+    <ngb-pagination [collectionSize]="result_Data.length" [(page)]="page" [pageSize]="pageSize" [maxSize]="100" [rotate]="true"
+      [boundaryLinks]="true" (pageChange)="refreshResult_List()"></ngb-pagination>
+  </div> -->
+<!-- /Pagination -->
+
+<ng-template #form_>
+  <!-- Form -->
+  <form [formGroup]="fbGroup" #form="ngForm">
+    <div class="form-row border border-dark mb-1">
+      <div class="form-row col-12 text-center position-relative">
+        <!-- Serial Number -->
+        <div class="form-group col-3 mb-1" formArrayName="r_Client">
+          <label [class.text-danger]="errorValidators['r_Client'][0].length && true">
+            {{ errorValidators['r_Client'][0].length ? errorValidators['r_Client'][0] : "客戶代碼" }}
+          </label>
+          <input type="text" class="form-control form-control-sm text-center" formControlName="0" placeholder="客戶代碼"
+            (blur)="inputValidators(fbGroup, 'r_Client')">
+        </div>
+        <!-- Serial Number -->
+        <div class="form-group col-4 mb-1" formArrayName="r_Client">
+          <label [class.text-danger]="errorValidators['r_Client'][1].length && true">
+            {{ errorValidators['r_Client'][1].length ? errorValidators['r_Client'][1] : "客戶" }}
+          </label>
+          <input type="text" class="form-control form-control-sm text-center" formControlName="1" placeholder="客戶"
+            (blur)="inputValidators(fbGroup, 'r_Client')">
+        </div>
+        <!-- Status -->
+        <div class="form-group col-3 mb-1">
+          <label [class.text-danger]="errorValidators['r_Status'].length && true">
+            {{ errorValidators['r_Status'].length ? errorValidators['r_Status'] : "狀態" }}
+          </label>
+
+          <input class="form-control form-control-sm text-center" formControlName="r_Status" list="r_Status"
+            placeholder="狀態" (blur)="inputValidators(fbGroup, 'r_Status')">
+          <datalist id="r_Status">
+            <option value="待修">
+            <option value="完修">
+            <option value="報廢">
+            <option value="待測">
+          </datalist>
+        </div>
+        <!-- MTotal -->
+        <div class="form-group col-2 mb-1">
+          <label [class.text-danger]="fb_Value['r_MTotal'].errors && true">
+            {{ fb_Value['r_MTotal'].errors ? "超時" : "工時" }}
+          </label>
+          <div class="form-control form-control-sm text-center">
+            {{ fb_Value['r_MTotal'].value }}
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-row border border-dark mb-1">
+      <div class="form-row col-12 text-center position-relative">
+        <!-- Serial Number -->
+        <div class="form-group col-4 mb-1" formArrayName="r_Error">
+          <label [class.text-danger]="errorValidators['r_Error'][0].length && true">
+            {{ errorValidators['r_Error'][0].length ? errorValidators['r_Error'][0] : "不良代碼" }}
+          </label>
+          <input type="text" class="form-control form-control-sm text-center" formControlName="0" placeholder="不良代碼"
+            (blur)="inputValidators(fbGroup, 'r_Error')">
+        </div>
+        <!-- Serial Number -->
+        <div class="form-group col-8 mb-1" formArrayName="r_Error">
+          <label [class.text-danger]="errorValidators['r_Error'][1].length && true">
+            {{ errorValidators['r_Error'][1].length ? errorValidators['r_Error'][1] : "不良原因" }}
+          </label>
+          <input type="text" class="form-control form-control-sm text-center" formControlName="1" placeholder="不良原因"
+            (blur)="inputValidators(fbGroup, 'r_Error')">
+        </div>
+      </div>
+    </div>
+
+    <div class="form-row border border-dark mb-1">
+      <div class="form-row col-12 text-center position-relative">
+        <!-- workOrder -->
+        <div class="form-group col mb-1">
+          <label [class.text-danger]="errorValidators['r_WorkOrder'].length && true">
+            {{ errorValidators['r_WorkOrder'].length ? errorValidators['r_WorkOrder'] : "工單" }}
+          </label>
+          <input type="text" class="form-control form-control-sm text-center" formControlName="r_WorkOrder"
+            placeholder="工單" (blur)="inputValidators(fbGroup, 'r_WorkOrder')">
+        </div>
+        <!-- Model -->
+        <div class="form-group col mb-1">
+          <label [class.text-danger]="errorValidators['r_Model'].length && true">
+            {{ errorValidators['r_Model'].length ? errorValidators['r_Model'] : "機種" }}
+          </label>
+          <input type="text" class="form-control form-control-sm text-center" formControlName="r_Model" placeholder="機種"
+            (blur)="inputValidators(fbGroup, 'r_Model')">
+        </div>
+        <!-- Serial Number -->
+        <div class="form-group col mb-1">
+          <label [class.text-danger]="errorValidators['r_SerialNumber'].length && true">
+            {{ errorValidators['r_SerialNumber'].length ? errorValidators['r_SerialNumber'] : "序號" }}
+          </label>
+          <input type="text" class="form-control form-control-sm text-center" formControlName="r_SerialNumber"
+            placeholder="序號" (blur)="inputValidators(fbGroup, 'r_SerialNumber')">
+        </div>
+      </div>
+    </div>
+    <!-- FormArray -->
+    <div class="form-row border border-dark text-center mb-1"
+      *ngFor="let val of [].constructor(fb_Value['r_Date'].value.length) let i = index">
+      <div class="form-row col-12 position-relative">
+        <!-- Icon Btn Group -->
+        <div class="form-icon-group">
+          <!-- Badge Number -->
+          <b class="text-dark">{{i+1}}</b>
+          <!-- Icon Button -->
+          <i [ngClass]="['bi', i>0 ? 'text-danger bi-dash-square' : 'text-info bi-plus-square']"
+            [title]="i>0 ? '刪除':'新增'" (click)="update_FormArray(i)">
+          </i>
+        </div>
+        <!-- Dates -->
+        <div class="form-group col-6 mb-1" formArrayName="r_Dates">
+          <label [class.text-danger]="errorValidators['r_Dates'][i].length && true">
+            {{ errorValidators['r_Dates'][i].length ? errorValidators['r_Dates'][i] : "查修日期" }}
+          </label>
+          <input type="date" [id]="i" class="form-control form-control-sm text-center" [formControlName]="i"
+            (input)="date_Change($event.target)">
+        </div>
+        <!-- Minutes -->
+        <div class="form-group col-6 mb-1" formArrayName="r_Minutes">
+          <label [class.text-danger]="errorValidators['r_Minutes'][i] && true">
+            {{ errorValidators['r_Minutes'][i].length ? errorValidators['r_Minutes'][i] : "查修時間" }}
+          </label>
+          <div class="input-group">
+            <input type="number" id="r_Minutes" class="form-control form-control-sm text-center" step="10" min="0"
+              max="470" [formControlName]="i" (input)="minute_Change(i)">
+            <div class="input-group-prepend">
+              <i class="bi bi-clock input-group-text bg-white"></i>
+            </div>
+          </div>
+        </div>
+        <!-- Process -->
+        <div class="form-group col-12 mb-1" formArrayName="r_Process">
+          <label [class.text-danger]="errorValidators['r_Process'][i].length && true">
+            {{ errorValidators['r_Process'][i].length ? errorValidators['r_Process'][i] : "查修過程/備註" }}
+          </label>
+          <input type="text" class="form-control form-control-sm text-center" [formControlName]="i"
+            (blur)="inputValidators(fbGroup, 'r_Process')">
+        </div>
+      </div>
+    </div>
+  </form>
+  <!-- /Form -->
+</ng-template>
