--- a/client/src/app/components/work/work.component.html
+++ b/client/src/app/components/work/work.component.html
@@ -5,7 +5,7 @@
 <!-- /Form -->
 
 <!-- Grid Table -->
-<div class="grid-container">
+<div class="grid-container" [ngStyle]="{'align-items': result_List.length > 5 ? 'stretch':'start'}">
   <div class="grid-header">
     <div>#</div>
     <div>工號姓名</div>
@@ -21,7 +21,8 @@
   <div class="grid-body">
     <!-- <div class="grid-body"
     [ngStyle]="{'grid-template-rows': result_List.length ? 'repeat('+result_List.length+', 1fr)':'repeat(1, 1fr)'}"> -->
-    <div class="grid-content" *ngFor="let item of result_List; let i = index" (click)="user.e_Lv > 1 && choose(item)" [ngClass]="{'grid-selected': item?.w_Id == fb_Value_Index[0]}">
+    <div class="grid-content" *ngFor="let item of result_List; let i = index" (click)="user.e_Lv > 1 && choose(item)"
+      [ngClass]="{'grid-selected': item?.w_Id == fb_Value_Index[0]}">
       <div>{{i+1}}</div>
       <div>
         <span>
@@ -48,27 +49,27 @@
       <div>
         <div *ngFor="let val of item.w_Quantity.split(','); let y = index" wn>
           <span>
-          {{ item.w_Model | splite:y }}
+            {{ item.w_Model | splite:y }}
           </span>
         </div>
       </div>
       <div>
-        <div *ngFor="let val of item.w_Quantity.split(','); let y = index" wn>
+        <div *ngFor="let val of item.w_Quantity.split(','); let y = index">
           <span>
-          {{ item.w_Stand | splite:y }}
-          <!-- {{ item.w_Stand | splite:y }} {{item.s_Title}} -->
+            {{ item.w_Stand | splite:y }}
+            <!-- {{ item.w_Stand | splite:y }} {{item.s_Title}} -->
           </span>
         </div>
       </div>
       <div>
-        <div *ngFor="let val of item.w_Quantity.split(','); let y = index" wn>
+        <div *ngFor="let val of item.w_Quantity.split(','); let y = index">
           <span>
             {{ item.w_Quantity | splite:y }}
           </span>
         </div>
       </div>
       <div>
-        <div *ngFor="let val of item.w_Quantity.split(','); let y = index" wn>
+        <div *ngFor="let val of item.w_Quantity.split(','); let y = index">
           <span>
             {{ item.w_Remark | splite:y }}
           </span>
@@ -125,15 +126,15 @@
 
 <!-- Pagination -->
 <div class="d-flex justify-content-center pagination pagination-sm mt-2">
-  <ngb-pagination [collectionSize]="result_Data.length" [(page)]="page" [pageSize]="pageSize" [maxSize]="100" [rotate]="true"
-    [boundaryLinks]="true" (pageChange)="refreshResult_List()"></ngb-pagination>
+  <ngb-pagination [collectionSize]="result_Data.length" [(page)]="page" [pageSize]="pageSize" [maxSize]="100"
+    [rotate]="true" [boundaryLinks]="true" (pageChange)="refreshResult_List()"></ngb-pagination>
 </div>
 <!-- /Pagination -->
 
 <ng-template #form_>
   <!-- Form -->
   <form [formGroup]="fbGroup" #form="ngForm">
-    <div class="form-row pb-1">
+    <div class="form-row pb-1 text-center">
       <!-- JobNumber -->
       <div class="input-group input-group-sm col">
         <div class="input-group-prepend">
@@ -183,7 +184,7 @@
       <!-- BMinute Start -->
       <div class="input-group input-group-sm col-md-6">
         <input type="datetime-local" id="SbMinute" step="3600" [min]="dateTime_Min" [max]="dateTime_Max"
-          class="form-control form-control-sm" [value]="onValue('SbMinute')" (input)="onDate($event.target)">
+          class="form-control form-control-sm text-center" [value]="onValue('SbMinute')" (input)="onDate($event.target)">
         <div class="input-group-prepend">
           <span class="input-group-text p-1">開始</span>
         </div>
@@ -191,7 +192,7 @@
       <!-- BMinute End -->
       <div class="input-group input-group-sm col-md-6">
         <input type="datetime-local" id="EbMinute" step="3600" [min]="dateTime_Min" [max]="dateTime_Max"
-          class="form-control form-control-sm" [value]="onValue('EbMinute')" (input)="onDate($event.target)">
+          class="form-control form-control-sm text-center" [value]="onValue('EbMinute')" (input)="onDate($event.target)">
         <div class="input-group-append">
           <span class="input-group-text p-1">結束</span>
         </div>
@@ -221,7 +222,7 @@
       <!-- OMinute Start -->
       <div class="input-group input-group-sm col-md-6">
         <input type="datetime-local" id="SoMinute" step="3600" [min]="dateTime_Min" [max]="dateTime_Max"
-          class="form-control form-control-sm" [value]="onValue('SoMinute')" (input)="onDate($event.target)">
+          class="form-control form-control-sm text-center" [value]="onValue('SoMinute')" (input)="onDate($event.target)">
         <div class="input-group-prepend">
           <span class="input-group-text p-1">開始</span>
         </div>
@@ -230,7 +231,7 @@
       <!-- OMinute End -->
       <div class="input-group input-group-sm col-md-6">
         <input type="datetime-local" id="EoMinute" step="3600" [min]="dateTime_Min" [max]="dateTime_Max"
-          class="form-control form-control-sm" [value]="onValue('EoMinute')" (input)="onDate($event.target)">
+          class="form-control form-control-sm text-center" [value]="onValue('EoMinute')" (input)="onDate($event.target)">
         <div class="input-group-append">
           <span class="input-group-text p-1">結束</span>
         </div>
@@ -238,44 +239,46 @@
     </div>
 
     <!-- FormArray -->
-    <div class="form-row border border-dark mb-1"
+    <div class="form-row border border-dark text-center mb-1"
       *ngFor="let val of [].constructor(fb_Value['w_WorkOrder'].value.length) let i = index">
       <div class="form-row col-12 position-relative">
-        <!-- Icon Button -->
-        <i [ngClass]="['bi text-info h6 position-absolute icon-btn', i>0 ? 'text-danger bi-dash-square' : 'text-info bi-plus-square']"
-          [title]="i>0 ? '刪除':'新增'" (click)="reset_FormArray(i)">
-        </i>
+        <!-- Icon Btn Group -->
+        <div class="form-icon-group">
+          <!-- Badge Number -->
+          <b class="text-dark">{{i+1}}</b>
+          <!-- Icon Button -->
+          <i [ngClass]="['bi', i>0 ? 'text-danger bi-dash-square' : 'text-info bi-plus-square']"
+            [title]="i>0 ? '刪除':'新增'" (click)="update_FormArray(i)">
+          </i>
+        </div>
         <!-- workOrder -->
-        <div class="form-group col text-center mb-1" formArrayName="w_WorkOrder">
+        <div class="form-group col mb-1" formArrayName="w_WorkOrder">
           <label [class.text-danger]="errorValidators['w_WorkOrder'][i].length && true">
-            {{ errorValidators['w_WorkOrder'][i].length && fb_Value['w_WorkOrder'].get(''+i).touched ?
-            errorValidators['w_WorkOrder'][i] : "工單" }}
+            {{ errorValidators['w_WorkOrder'][i].length ? errorValidators['w_WorkOrder'][i] : "工單" }}
           </label>
-          <input type="text" class="form-control form-control-sm" [formControlName]="i" placeholder="工單"
-            (blur)="inputValidators(fbGroup, 'w_WorkOrder', i)">
+          <input type="text" class="form-control form-control-sm text-center" [formControlName]="i" placeholder="工單"
+            (blur)="inputValidators(fbGroup, 'w_WorkOrder')">
         </div>
         <!-- Model -->
-        <div class="form-group col text-center mb-1" formArrayName="w_Model">
+        <div class="form-group col mb-1" formArrayName="w_Model">
           <label [class.text-danger]="errorValidators['w_Model'][i].length && true">
-            {{ errorValidators['w_Model'][i].length && fb_Value['w_WorkOrder'].get(''+i).touched ?
-            errorValidators['w_Model'][i] : "機種" }}
+            {{ errorValidators['w_Model'][i].length ? errorValidators['w_Model'][i] : "機種" }}
           </label>
-          <input type="text" class="form-control form-control-sm" [formControlName]="i" placeholder="機種"
-            (blur)="inputValidators(fbGroup, 'w_Model', i)">
+          <input type="text" class="form-control form-control-sm text-center" [formControlName]="i" placeholder="機種"
+            (blur)="inputValidators(fbGroup, 'w_Model')">
         </div>
         <!-- Stand -->
-        <div class="form-group col text-center mb-1" formArrayName="w_Stand">
+        <div class="form-group col mb-1" formArrayName="w_Stand">
           <label [class.text-danger]="errorValidators['w_Stand'][i].length && true">
-            {{ errorValidators['w_Stand'][i].length && fb_Value['w_WorkOrder'].get(''+i).touched ?
-            errorValidators['w_Stand'][i] : "站別" }}
+            {{ errorValidators['w_Stand'][i].length ? errorValidators['w_Stand'][i] : "站別" }}
           </label>
           <!-- <input class="form-control form-control-sm" [formControlName]="i" [attr.list]="'standtOptions'+i" id="stand"
-          placeholder="站別" (blur)="inputValidators(fbGroup, 'w_Stand', i)">
+          placeholder="站別" (blur)="inputValidators(fbGroup, 'w_Stand')">
         <datalist [id]="'standtOptions'+i">
           <option *ngFor="let item of standList$ | async; index as i" [value]="item.s_Code"> {{item.s_Title}}
         </datalist> -->
           <select id="lv" class="form-control text-center custom-select" [formControlName]="i"
-            (blur)="inputValidators(fbGroup, 'w_Stand', i)">
+            (blur)="inputValidators(fbGroup, 'w_Stand')">
             <option *ngFor="let item of standList$ | async; index as i" [value]="item.s_Code">
               {{item.s_Code}} {{item.s_Title}}
             </option>
@@ -283,9 +286,9 @@
         </div>
       </div>
 
-      <div class="form-row col-12">
+      <div class="form-row col-12 text-center">
         <!-- Quantity -->
-        <div class="form-group col-2 text-center mb-1" formArrayName="w_Quantity">
+        <div class="form-group col-2 mb-1" formArrayName="w_Quantity">
           <label [class.text-danger]="errorValidators['w_Quantity'][i].length && true">
             {{ errorValidators['w_Quantity'][i].length ? errorValidators['w_Quantity'][i] : "數量" }}
           </label>
@@ -293,12 +296,12 @@
             [formControlName]="i" (blur)="inputValidators(fbGroup, 'w_Quantity', i)">
         </div>
         <!-- Remark -->
-        <div class="form-group col-10 text-center mb-1" formArrayName="w_Remark">
+        <div class="form-group col-10 mb-1" formArrayName="w_Remark">
           <label [class.text-danger]="errorValidators['w_Remark'][i].length && true">
             {{ errorValidators['w_Remark'][i] ? errorValidators['w_Remark'][i] : "備註" }}
           </label>
-          <input type="text" class="form-control form-control-sm" [formControlName]="i" placeholder="備註"
-            (blur)="inputValidators(fbGroup, 'w_Remark', i)">
+          <input type="text" class="form-control form-control-sm text-center" [formControlName]="i" placeholder="備註"
+            (blur)="inputValidators(fbGroup, 'w_Remark')">
         </div>
       </div>
     </div>
