--- a/client/src/app/components/work/work.component.scss
+++ b/client/src/app/components/work/work.component.scss
@@ -1,11 +1,3 @@
-/*** Form Icon Button ***/
-.icon-btn
-{
-  top: 5px;
-  right:5px;
-  cursor: pointer;
-  z-index: 999;
-}
 /*** Date Input ***/
 .datetime-font-size
 {
@@ -23,14 +15,14 @@
   grid-template-areas:
   "grid-header"
   "grid-body";
-  height: 90vh;
+  height: 100vh;
   font-size: 1em;
   margin-top: 1rem;
 }
 .grid-container .grid-header
 {
   display: grid;
-  grid-template-columns: 30px 150px 150px 150px 150px 150px 50px 50px 487px 100px;
+  grid-template-columns: 30px 150px 150px 150px 150px 150px 50px 50px 487px 100px; //1317
   grid-template-rows: 1fr;
   gap: 0 0.2em;
   font-weight: 600;
@@ -126,7 +118,7 @@ grid-container,
     grid-template-columns: repeat(auto-fill, 1fr);
     grid-template-rows: 1fr;
     grid-gap: 0 0.2em;
-    grid-auto-columns: minmax(160px, 1fr);
+    grid-auto-columns: minmax(120px, 120px);
     grid-auto-flow: column;
     overflow-x: scroll;
     scroll-padding-top: 7rem;
